// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fixture snapshots > easy-from-new trace is stable 1`] = `
[
  {
    "daysSinceLast": 0,
    "difficulty": 1,
    "dueDate": "2026-01-05",
    "fsrsState": "review",
    "grade": 5,
    "lapses": 0,
    "learningStep": null,
    "reps": 1,
    "scheduledDays": 4,
    "stability": 8.3,
    "step": 0,
    "todayIso": "2026-01-01",
  },
]
`;

exports[`fixture snapshots > lapse-and-recover trace is stable 1`] = `
[
  {
    "daysSinceLast": 0,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 4,
    "lapses": 0,
    "learningStep": 0,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 0,
    "todayIso": "2026-01-01",
  },
  {
    "daysSinceLast": 1,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 4,
    "lapses": 0,
    "learningStep": 1,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 1,
    "todayIso": "2026-01-02",
  },
  {
    "daysSinceLast": 3,
    "difficulty": 2.12,
    "dueDate": "2026-01-06",
    "fsrsState": "review",
    "grade": 4,
    "lapses": 0,
    "learningStep": null,
    "reps": 1,
    "scheduledDays": 1,
    "stability": 2.3,
    "step": 2,
    "todayIso": "2026-01-05",
  },
  {
    "daysSinceLast": 8,
    "difficulty": 2.11,
    "dueDate": "2026-02-05",
    "fsrsState": "review",
    "grade": 4,
    "lapses": 0,
    "learningStep": null,
    "reps": 2,
    "scheduledDays": 23,
    "stability": 22.8,
    "step": 3,
    "todayIso": "2026-01-13",
  },
  {
    "daysSinceLast": 16,
    "difficulty": 2.1,
    "dueDate": "2026-04-12",
    "fsrsState": "review",
    "grade": 4,
    "lapses": 0,
    "learningStep": null,
    "reps": 3,
    "scheduledDays": 73,
    "stability": 72.6,
    "step": 4,
    "todayIso": "2026-01-29",
  },
  {
    "daysSinceLast": 30,
    "difficulty": 7.39,
    "dueDate": "2026-02-28",
    "fsrsState": "relearning",
    "grade": 1,
    "lapses": 1,
    "learningStep": 0,
    "reps": 4,
    "scheduledDays": 0,
    "stability": 3.2,
    "step": 5,
    "todayIso": "2026-02-28",
  },
  {
    "daysSinceLast": 0,
    "difficulty": 7.39,
    "dueDate": "2026-02-28",
    "fsrsState": "relearning",
    "grade": 4,
    "lapses": 1,
    "learningStep": 1,
    "reps": 4,
    "scheduledDays": 0,
    "stability": 3.2,
    "step": 6,
    "todayIso": "2026-02-28",
  },
  {
    "daysSinceLast": 1,
    "difficulty": 7.38,
    "dueDate": "2026-03-02",
    "fsrsState": "review",
    "grade": 4,
    "lapses": 1,
    "learningStep": null,
    "reps": 5,
    "scheduledDays": 1,
    "stability": 5.3,
    "step": 7,
    "todayIso": "2026-03-01",
  },
  {
    "daysSinceLast": 4,
    "difficulty": 7.37,
    "dueDate": "2026-03-17",
    "fsrsState": "review",
    "grade": 4,
    "lapses": 1,
    "learningStep": null,
    "reps": 6,
    "scheduledDays": 12,
    "stability": 11.6,
    "step": 8,
    "todayIso": "2026-03-05",
  },
]
`;

exports[`fixture snapshots > long-absence trace is stable 1`] = `
[
  {
    "daysSinceLast": 0,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 4,
    "lapses": 0,
    "learningStep": 0,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 0,
    "todayIso": "2026-01-01",
  },
  {
    "daysSinceLast": 1,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 4,
    "lapses": 0,
    "learningStep": 1,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 1,
    "todayIso": "2026-01-02",
  },
  {
    "daysSinceLast": 60,
    "difficulty": 2.12,
    "dueDate": "2026-03-04",
    "fsrsState": "review",
    "grade": 4,
    "lapses": 0,
    "learningStep": null,
    "reps": 1,
    "scheduledDays": 1,
    "stability": 2.3,
    "step": 2,
    "todayIso": "2026-03-03",
  },
]
`;

exports[`fixture snapshots > model-student trace is stable 1`] = `
[
  {
    "daysSinceLast": 0,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 4,
    "lapses": 0,
    "learningStep": 0,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 0,
    "todayIso": "2026-01-01",
  },
  {
    "daysSinceLast": 1,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 4,
    "lapses": 0,
    "learningStep": 1,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 1,
    "todayIso": "2026-01-02",
  },
  {
    "daysSinceLast": 3,
    "difficulty": 2.12,
    "dueDate": "2026-01-06",
    "fsrsState": "review",
    "grade": 4,
    "lapses": 0,
    "learningStep": null,
    "reps": 1,
    "scheduledDays": 1,
    "stability": 2.3,
    "step": 2,
    "todayIso": "2026-01-05",
  },
  {
    "daysSinceLast": 8,
    "difficulty": 1,
    "dueDate": "2026-02-23",
    "fsrsState": "review",
    "grade": 5,
    "lapses": 0,
    "learningStep": null,
    "reps": 2,
    "scheduledDays": 41,
    "stability": 40.6,
    "step": 3,
    "todayIso": "2026-01-13",
  },
  {
    "daysSinceLast": 20,
    "difficulty": 1,
    "dueDate": "2026-05-22",
    "fsrsState": "review",
    "grade": 4,
    "lapses": 0,
    "learningStep": null,
    "reps": 3,
    "scheduledDays": 109,
    "stability": 109.1,
    "step": 4,
    "todayIso": "2026-02-02",
  },
]
`;

exports[`fixture snapshots > struggle trace is stable 1`] = `
[
  {
    "daysSinceLast": 0,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 1,
    "lapses": 0,
    "learningStep": 0,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 0,
    "todayIso": "2026-01-01",
  },
  {
    "daysSinceLast": 0,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 2,
    "lapses": 0,
    "learningStep": 0,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 1,
    "todayIso": "2026-01-01",
  },
  {
    "daysSinceLast": 0,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 4,
    "lapses": 0,
    "learningStep": 1,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 2,
    "todayIso": "2026-01-01",
  },
  {
    "daysSinceLast": 1,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 1,
    "lapses": 0,
    "learningStep": 0,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 3,
    "todayIso": "2026-01-02",
  },
  {
    "daysSinceLast": 0,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 4,
    "lapses": 0,
    "learningStep": 1,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 4,
    "todayIso": "2026-01-02",
  },
  {
    "daysSinceLast": 2,
    "difficulty": 0,
    "dueDate": "2026-01-01",
    "fsrsState": "new",
    "grade": 2,
    "lapses": 0,
    "learningStep": 1,
    "reps": 0,
    "scheduledDays": 0,
    "stability": 0,
    "step": 5,
    "todayIso": "2026-01-04",
  },
  {
    "daysSinceLast": 4,
    "difficulty": 2.12,
    "dueDate": "2026-01-09",
    "fsrsState": "review",
    "grade": 4,
    "lapses": 0,
    "learningStep": null,
    "reps": 1,
    "scheduledDays": 1,
    "stability": 2.3,
    "step": 6,
    "todayIso": "2026-01-08",
  },
]
`;
